# test_aws

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  credentials.csv  install_manifest.txt  main.cpp  test_aws  test_aws.cbp
